--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "vue-cli-service serve",
     "start": "nodemon server.js",
-    "migrate": "node-pg-migrate up",
+    "migrate": "node-pg-migrate up --no-check-order",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
