--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
     "mongoose": "^8.0.3",
     "node-pg-migrate": "^6.2.2",
     "pg": "^8.11.3",
+    "pg-pool": "^3.6.1",
     "postcss": "^8",
     "tailwindcss": "^3",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "winston": "^3.3.3",
+    "winston-elasticsearch": "^0.15.6",
+    "winston3-logstash-transport": "^1.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
